# os-net-config

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  config.rst  examples.rst  index.rst  installation.rst  usage.rst
etc/os-net-config/samples/: bond.json  bond.yaml  bond_mapped.yaml  bridge_dhcp.json  bridge_dhcp.yaml  bridge_fail_mode.json  bridge_fail_mode.yaml  bridge_ovs_extra.json  bridge_ovs_extra.yaml  bridge_vlan.json  bridge_vlan.yaml  contrail_vrouter.json  contrail_vrouter.yaml  contrail_vrouter_dpdk.json  contrail_vrouter_dpdk.yaml  contrail_vrouter_dpdk_bond.json  contrail_vrouter_dpdk_bond.yaml  contrail_vrouter_vlan.json  contrail_vrouter_vlan.yaml  ib_child_interface.json  ib_child_interface.yaml  ib_interface.json  ib_interface.yaml  interface.json  interface.yaml  ivs.json  ivs.yaml  linux_bond.yaml  linux_bond_networkmanager.yaml  linux_bridge.yaml  linux_tap.json  linux_tap.yaml  mapping.yaml  mapping_mnemonic.yaml  mapping_report.yaml  nfvswitch.json  nfvswitch.yaml  ovs_dpdk.json  ovs_dpdk.yaml  ovs_dpdk_bond.json  (+18 more)
os_net_config/: __init__.py  cli.py  common.py  impl_eni.py  impl_ifcfg.py  impl_iproute.py  impl_nmstate.py  objects.py  schema.yaml  sriov_bind_config.py  sriov_config.py  utils.py  validator.py  version.py
os_net_config/openstack/common/: gettextutils.py  importutils.py  jsonutils.py  log.py  processutils.py  strutils.py
os_net_config/tests/: base.py  test_cli.py  test_impl_eni.py  test_impl_ifcfg.py  test_impl_nmstate.py  test_objects.py  test_os_net_config.py  test_sriov_bind_config.py  test_sriov_config.py  test_utils.py  test_validator.py
os_net_config/tests/environment/: netinfo_running_info_1.yaml
releasenotes/notes/: add-neutron-route-schema-support-e8e20a8c3b79d14d.yaml  add-pci-address-in-sriov-config-06016e4e69b322ca.yaml  add_contrail_vrouter_vlan_linux_bond_type-0a89f3499a7ab08b.yaml  allow-list-of-routes-to-be-empty-323690796760630d.yaml  check-ovs-ef665418762ca123.yaml  dpdk-on-mellanox-nics-1d8fdb843a4e2b60.yaml  enable-setting-domain-5557e2441c23a5a5.yaml  log-info-nic-discovery-f54ace7639890fdf.yaml  log-mapping-file-8b2a9d8f6a81ba99.yaml  modify-interface-without-restart-d55949572017d52f.yaml  policy-based-routing-3fa1200ae155bbee.yaml  restart-ivs-nvfswitch-after-change-0825ea78aae8f138.yaml  retry_ovs-appctl-6734b087ab6db80b.yaml  sriov-vf-in-hosts-529c2bf0cb3294b3.yaml
releasenotes/source/: conf.py  index.rst  unreleased.rst
zuul.d/: layout.yaml
