[metadata]
name = os-net-config
summary = OpenStack network configuration
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://git.openstack.org/cgit/openstack/os-net-config
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: Linux
    Programming Language :: Python

[files]
packages =
    os_net_config

[global]
setup-hooks =
        pbr.hooks.setup_hook

[entry_points]
console_scripts =
        os-net-config = os_net_config.cli:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = os_net_config/locale
domain = os-net-config

[update_catalog]
domain = os-net-config
output_dir = os_net_config/locale
input_file = os_net_config/locale/os-net-config.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = os_net_config/locale/os-net-config.pot

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
