[metadata]
name = os-net-config
summary = OpenStack network configuration
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
license = Apache License (2.0)
home-page = http://git.openstack.org/cgit/openstack/os-net-config
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    os_net_config

[global]
setup-hooks =
        pbr.hooks.setup_hook

[entry_points]
console_scripts =
        os-net-config = os_net_config.cli:main
        os-net-config-sriov = os_net_config.sriov_config:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
