[metadata]
name = os-net-config
summary = OpenStack network configuration
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
license = Apache License (2.0)
home_page = https://opendev.org/openstack/os-net-config
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    os_net_config

[entry_points]
console_scripts =
        os-net-config = os_net_config.cli:main
        os-net-config-sriov = os_net_config.sriov_config:main
        os-net-config-sriov-bind = os_net_config.sriov_bind_config:main
